--- a/ps4/.env
+++ b/ps4/.env
@@ -4,3 +4,6 @@ SERVER_IP=""
 HOST_SERVER_TESTING="127.0.0.1"
 PORT_SERVER_TESTING=5000
 GRPC_PORT = 5001
+SERVER5001="0.0.0.0"
+SERVER5002="0.0.0.0"
+SERVER5003="10.250.52.166"
